--- a/react-interview-rent-car/package.json
+++ b/react-interview-rent-car/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "rc-pagination": "^3.4.2",
     "react": "^18.2.0",
